--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "build": "nest build",
+    "build": "npx @nestjs/cli build",
     "clean": "rm -rf ./dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "npx @nestjs/cli start",
+    "start:dev": "npx @nestjs/cli start --watch",
+    "start:debug": "npx @nestjs/cli start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
