--- a/package.json
+++ b/package.json
@@ -24,51 +24,55 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/compress": "^6.1.1",
+    "@fastify/csrf-protection": "^6.4.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/static": "^6.12.0",
-    "@nestjs/common": "^10.3.0",
+    "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.3.0",
+    "@nestjs/core": "^10.4.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.3.0",
-    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/platform-fastify": "^10.4.7",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
-    "@nestjs/testing": "^10.3.0",
-    "@prisma/client": "^5.8.0",
+    "@nestjs/testing": "^10.4.7",
+    "@nestjs/throttler": "^6.2.1",
+    "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
-    "fastify": "^4.25.2",
+    "fastify": "^4.28.1",
+    "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "winston": "^3.11.0",
+    "winston": "^3.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.17.6",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prisma": "^5.8.0",
-    "rimraf": "^5.0.5",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
+    "nodemon": "^3.1.7",
+    "prisma": "^5.22.0",
+    "rimraf": "^5.0.10",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.3"
   }
 }
