--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.703.0",
     "@fastify/compress": "^6.1.1",
     "@fastify/csrf-protection": "^6.4.1",
     "@fastify/helmet": "^11.1.1",
@@ -43,6 +44,7 @@
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
     "argon2": "^0.41.1",
+    "aws-sdk": "^2.1692.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
@@ -51,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qs": "^6.13.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "winston": "^3.16.0",
@@ -61,6 +64,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qs": "^6.9.17",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
