--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@fastify/compress": "^6.1.1",
     "@fastify/csrf-protection": "^6.4.1",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^8.2.0",
     "@fastify/static": "^6.12.0",
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.4.7",
+    "@nestjs/platform-fastify": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/testing": "^10.4.7",
