--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^23.10.3",
     "qs": "^6.13.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
