--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^10.4.7",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
+    "@webundsoehne/nest-fastify-file-upload": "^2.2.0",
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1692.0",
     "class-transformer": "^0.5.1",
