--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "qs": "^6.13.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "uuid": "^11.0.3",
     "winston": "^3.16.0",
     "zod": "^3.23.8"
   },
