--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,21 @@ services:
     build: .
     ports:
       - "3000:3000"
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
-      SECRET: ${SECRET}
-      BUCKET_NAME: ${BUCKET_NAME}
-      ACCESS_KEY: ${ACCESS_KEY}
-      SECRET_KEY: ${SECRET_KEY}
-      REGION: ${REGION}
+      - "5555:5555"
+    env_file:
+      - .env
     depends_on:
       - db
+    command: >
+      sh -c "npx prisma migrate deploy && pnpm start:prod"   
 
   db:
     image: postgres:15-alpine
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
+      POSTGRES_PASSWORD: password123
       POSTGRES_DB: mysopwise-db
+      POSTGRES_HOST: db
     ports:
       - "5432:5432"
     volumes:
