--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@webundsoehne/nest-fastify-file-upload": "^2.2.0",
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1692.0",
+    "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
