--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
     "@typescript-eslint/parser": "^6.21.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^5.5.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
